fix(style): code display as expected on mobile device

--- a/src/styles/Article.module.scss
+++ b/src/styles/Article.module.scss
@@ -26,6 +26,10 @@
         text-decoration: underline;
     }
 
+    pre {
+        overflow-x: auto;
+    }
+
     .details {
         margin-top: 10px;
         display: flex;
